--- a/package.json
+++ b/package.json
@@ -4,11 +4,17 @@
   "description": "An application that transforms a .txt list into a web page",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "ndindex": "nodemon index.js",
+    "ndweb": "nodemon webConverter.js"
   },
   "author": "one-more-dev",
   "license": "ISC",
   "dependencies": {
+    "chalk": "^4.1.2",
+    "ejs": "^3.1.9",
     "express": "^4.18.2"
+  },
+  "devDependencies": {
+    "nodemon": "^3.0.1"
   }
 }
